# agentic_research

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  fly.toml  nixpacks.toml  pyproject.toml  render.yaml  演示.mov
docs/: DEVELOPMENT_PLAN.md  multimodal_research_agent_system_design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CanvasPanel.tsx  ConsoleLog.tsx  HistoryPanel.tsx  PipelineFlowchart.tsx  ResultPanel.tsx
frontend/src/hooks/: useRunStream.ts
frontend/src/state/: pipelineReducer.ts
scripts/: run_report.py  serve_web.sh  verify_sprint2.py  verify_step1.py
src/: db.py  models.py
src/analysis/: calculator.py  frameworks.py
src/api/: server.py
src/assembly/: assembler.py  html_template.py  pdf_export.py
src/charts/: planner.py  real_data.py  renderer.py
src/config/: llm.py  settings.py
src/connectors/: akshare_connector.py  base.py  bocha_search.py  eastmoney.py
src/evidence/: chunker.py  store.py
src/graph/: run_control.py  workflow.py
src/graph/nodes/: planner.py
src/parsers/: base.py  html_parser.py  pdf_parser.py
src/quality/: checker.py
src/retrieval/: citation.py  retriever.py
src/telemetry/: __init__.py  run_events.py
src/writers/: executive_summary.py  reviser.py  section_writer.py
tests/: test_api_7b.py  test_run_events.py
