[project]
name = "research-report-agent"
version = "0.1.0"
description = "多模态行业研报生成 Agent 系统"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "pydantic>=2.0",
    "akshare",
    "requests",
    "beautifulsoup4",
    "chromadb",
    "rank-bm25",
    "jieba",
    "matplotlib",
    "pandas",
    "numpy",
    "python-dotenv",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
pdf = ["pymupdf", "pdf4llm"]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 120
